Implement exponential average search time per hour statistics.